[gd_scene load_steps=21 format=2]

[ext_resource path="res://resources/assets/FloatingEyeIdleFront.png" type="Texture" id=1]
[ext_resource path="res://hurttriggerhitbox/Triggerbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://hurttriggerhitbox/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://autoload/Stats.tscn" type="PackedScene" id=4]
[ext_resource path="res://enemy/scripts/EnemyRanged.gd" type="Script" id=5]
[ext_resource path="res://enemy/scripts/ChasePlayerZone.gd" type="Script" id=6]
[ext_resource path="res://enemy/scripts/WanderTimer.gd" type="Script" id=7]
[ext_resource path="res://enemy/scripts/EnemyVectorAttack.gd" type="Script" id=8]
[ext_resource path="res://resources/tools/scenes/VectorAssistant.tscn" type="PackedScene" id=9]
[ext_resource path="res://resources/stats/enemy_ranged/stats_ranged_enemy_default.tres" type="Resource" id=10]
[ext_resource path="res://resources/assets/fire-skull-no-fire.png" type="Texture" id=11]
[ext_resource path="res://resources/assets/Audio/Crackle_Impact1.wav" type="AudioStream" id=12]

[sub_resource type="AtlasTexture" id=83]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=84]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=85]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=86]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=87]
animations = [ {
"frames": [ SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=80]
radius = 8.0

[sub_resource type="CircleShape2D" id=81]
radius = 88.0

[sub_resource type="CapsuleShape2D" id=82]
radius = 16.0
height = 16.0

[node name="EnemyRanged" type="KinematicBody2D"]
collision_layer = 32
script = ExtResource( 5 )

[node name="Sprite" type="AnimatedSprite" parent="."]
position = Vector2( -7.15256e-07, 0 )
scale = Vector2( 2, 2 )
frames = SubResource( 87 )
frame = 2
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 80 )

[node name="ChaseTriggerBox" parent="." instance=ExtResource( 2 )]
collision_layer = 0
collision_mask = 4
script = ExtResource( 6 )

[node name="CollisionShape2D" parent="ChaseTriggerBox" index="0"]
shape = SubResource( 81 )

[node name="EnemyHurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 64
collision_mask = 16

[node name="CollisionShape2D" parent="EnemyHurtbox" index="0"]
shape = SubResource( 82 )

[node name="EnemyBulletSpawn" type="Position2D" parent="."]
position = Vector2( 32, 0 )

[node name="EnemyStats" parent="." instance=ExtResource( 4 )]
stats_resource = ExtResource( 10 )
acceleration = 300
max_speed = 50
roll_speed = 200
friction = 200
bullet_speed = 1000
timer_fire_weapon = 1.5

[node name="WanderTimer" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="Timer" type="Timer" parent="WanderTimer"]
one_shot = true
autostart = true

[node name="TimerCanAttack" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="VectorAssistant" parent="." instance=ExtResource( 9 )]
script = ExtResource( 8 )

[node name="Sprite" parent="VectorAssistant" index="0"]
visible = false

[node name="CursedSymbol" type="Sprite" parent="."]
visible = false
position = Vector2( -11, -19 )
scale = Vector2( 0.185185, 0.142857 )
texture = ExtResource( 11 )
flip_h = true
hframes = 4
frame = 2

[node name="Hit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = 1.0

[connection signal="body_entered" from="ChaseTriggerBox" to="ChaseTriggerBox" method="_on_ChaseTriggerBox_body_entered"]
[connection signal="body_exited" from="ChaseTriggerBox" to="ChaseTriggerBox" method="_on_ChaseTriggerBox_body_exited"]
[connection signal="area_entered" from="EnemyHurtbox" to="." method="_on_EnemyHurtbox_area_entered"]
[connection signal="no_health" from="EnemyStats" to="." method="_on_EnemyStats_no_health"]
[connection signal="timeout" from="WanderTimer/Timer" to="WanderTimer" method="_on_Timer_timeout"]
[connection signal="timeout" from="TimerCanAttack" to="." method="_on_TimerCanAttack_timeout"]

[editable path="ChaseTriggerBox"]
[editable path="EnemyHurtbox"]
[editable path="VectorAssistant"]
